src/objects/Dettaglio_Riparazione__c.object
<CustomObject>
    <fields>
        <fullName>Riparazione_Richiesta__c</fullName>
        <label>Riparazione Richiesta</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Tipo_Riparazione__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accorciare fondo</fullName>
                </value>
                <value>
                    <fullName>Ridurre fondo</fullName>
                </value>
                <value>
                    <fullName>Fare risvolto</fullName>
                </value>
                <value>
                    <fullName>Stringere vita/bacino</fullName>
                </value>
                <value>
                    <fullName>Stringere punta cavallo</fullName>
                </value>
                <value>
                    <fullName>Ridurre coscia</fullName>
                </value>
                <value>
                    <fullName>Allargare vita/bacino</fullName>
                </value>
                <value>
                    <fullName>Allargare punta cavallo</fullName>
                </value>
                <value>
                    <fullName>Stringere gamba</fullName>
                </value>
                <value>
                    <fullName>Abbassare cintura davanti</fullName>
                </value>
                <value>
                    <fullName>Abbassare cintura dietro</fullName>
                </value>
                <value>
                    <fullName>Accorciare maniche</fullName>
                </value>
                <value>
                    <fullName>Allungare maniche</fullName>
                </value>
                <value>
                    <fullName>Stringere maniche</fullName>
                </value>
                <value>
                    <fullName>Stringere fianchi/bacino</fullName>
                </value>
                <value>
                    <fullName>Allargare fianchi/bacino</fullName>
                </value>
                <value>
                    <fullName>Stringere fianchi e giri</fullName>
                </value>
                <value>
                    <fullName>Rinforzare spalline</fullName>
                </value>
                <value>
                    <fullName>Riprendere punta spalla</fullName>
                </value>
                <value>
                    <fullName>Allargare centro schiena</fullName>
                </value>
                <value>
                    <fullName>Stringere centro schiena</fullName>
                </value>
                <value>
                    <fullName>Stringere incollatura e accorciare collo</fullName>
                </value>
                <value>
                    <fullName>Abbassare collo</fullName>
                </value>
                <value>
                    <fullName>Pulire cannelli</fullName>
                </value>
                <value>
                    <fullName>Aprire asole</fullName>
                </value>
                <value>
                    <fullName>Altro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Riparazione__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Riparazione</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Dettagli_Riparazioni</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Riparazione_autorizzata__c</fullName>
        <label>Riparazione autorizzata</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sì</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Si</fullName>
                    <isActive>false</isActive>
                    <label>Si</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Riparazione_completata_Note__c</fullName>
        <label>Note Avvenuta Riparazione</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ritirato__c</fullName>
        <label>Ritirato?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scontrino__c</fullName>
        <label>Scontrino</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sì</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_email_to_client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send email to client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stagione__c</fullName>
        <formula>Articolo__r.Stagione__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stagione</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ricevimento capo danneggiato in boutique</fullName>
                    <default>true</default>
                    <label>Ricevimento capo danneggiato in boutique</label>
                </value>
                <value>
                    <fullName>Riparazione richiesta al Customer Care</fullName>
                </value>
                <value>
                    <fullName>Invio prodotto in laboratorio</fullName>
                </value>
                <value>
                    <fullName>Ricevimento capo in laboratorio</fullName>
                </value>
                <value>
                    <fullName>Riparazione in progress</fullName>
                </value>
                <value>
                    <fullName>Numero di autorizzazione inserito</fullName>
                </value>
                <value>
                    <fullName>Invio capo verso sede</fullName>
                </value>
                <value>
                    <fullName>Ricevimento capo danneggiato in sede</fullName>
                </value>
                <value>
                    <fullName>Riparazione effettuata</fullName>
                </value>
                <value>
                    <fullName>Spedizione capo riparato effettuata</fullName>
                </value>
                <value>
                    <fullName>Ricevimento capo riparato in boutique</fullName>
                </value>
                <value>
                    <fullName>Riconsegna al cliente effettuata</fullName>
                </value>
                <value>
                    <fullName>Aperto</fullName>
                </value>
                <value>
                    <fullName>Prodotto in Riparazione</fullName>
                </value>
                <value>
                    <fullName>Prodotto Riparato</fullName>
                </value>
                <value>
                    <fullName>Prodotto riconsegnato in Boutique</fullName>
                </value>
                <value>
                    <fullName>Prodotto riconsegnato</fullName>
                </value>
                <value>
                    <fullName>Cliente contattato</fullName>
                </value>
                <value>
                    <fullName>Prodotto consegnato al cliente</fullName>
                </value>
                <value>
                    <fullName>Capo ricevuto in Boutique</fullName>
                </value>
                <value>
                    <fullName>Chiuso</fullName>
                </value>
                <value>
                    <fullName>non modificare</fullName>
                    <isActive>false</isActive>
                    <label>non modificare</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <label>Supplier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taglia__c</fullName>
        <label>Taglia</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tempo_contatto_cliente__c</fullName>
        <formula>DATEVALUE(Data_contatto_cliente__c) - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Durata Processo Riparazione (giorni)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tempo_riparazione_giorni__c</fullName>
        <formula>Data_riparazione_effettiva__c - DATEVALUE(Data_affidamento_riparazione__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tempo riparazione (giorni)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tipo_Riparazione__c</fullName>
        <label>Tipo Riparazione</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pantaloni</fullName>
                </value>
                <value>
                    <fullName>Capospalla</fullName>
                </value>
                <value>
                    <fullName>Altra riparazione</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Titolare_Boutique__c</fullName>
        <formula>IF (AND (OR($User.ProfileId = $Setup.Profile__c.Id_Boutique__c,$User.ProfileId = $Setup.Profile__c.Id_Associate__c,$User.ProfileId = $Setup.Profile__c.Id_Boutique_SG_TW__c),
!ISNULL(Id_Location__c),
Id_Location__c = $User.Codice_Boutique__c), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Titolare Boutique</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Titolare_Client_Advisor__c</fullName>
        <formula>IF (AND(
OR($User.ProfileId = $Setup.Profile__c.Id_Associate__c,$User.ProfileId = $Setup.Profile__c.Id_Boutique__c,$User.ProfileId = $Setup.Profile__c.Id_Boutique_SG_TW__c),
!ISNULL(Id_Associate__c), !ISBLANK(Id_Associate__c), Id_Associate__c &lt;&gt; &apos;&apos;,
Id_Associate__c = $User.Codice_Associate__c),
true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Titolare Client Advisor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tracking_Number_ritiro__c</fullName>
        <label>Tracking Number ritiro</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracking_Number_uscita__c</fullName>
        <label>Tracking Number uscita</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Uniform_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Uniform Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Associated__c.IsActive__c</field>
                <operation>equals</operation>
                <value>A</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Associated__c</referenceTo>
        <relationshipLabel>Repairs (Uniform Owner)</relationshipLabel>
        <relationshipName>Dettagli_Riparazioni_o_Modifiche</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Riparazione</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Commerciale_E_commerce_Dettaglio_Riparazione</fullName>
        <filterScope>Queue</filterScope>
        <label>Commerciale E-commerce</label>
        <queue>Commerciale_E_commerce</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Open_Repairs</fullName>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>Articolo__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Open Repairs</label>
        <sharedTo>
            <group>Customer_Care_IT</group>
            <role>X1_Livello</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Repairs_Waiting_for_Pickup</fullName>
        <columns>NAME</columns>
        <columns>Associate__c</columns>
        <columns>Status__c</columns>
        <columns>Client__c</columns>
        <columns>Articolo__c</columns>
        <columns>Causa_difetto_riscontrato__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Titolare_Client_Advisor__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Cliente contattato</value>
        </filters>
        <label>My repairs waiting for pickup</label>
        <sharedTo>
            <group>Associates</group>
            <group>Store_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Repairs_waiting_to_be_sent_to_Solomeo</fullName>
        <columns>NAME</columns>
        <columns>Associate__c</columns>
        <columns>Status__c</columns>
        <columns>Client__c</columns>
        <columns>Articolo__c</columns>
        <columns>Causa_difetto_riscontrato__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Titolare_Client_Advisor__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Invio capo verso sede</value>
        </filters>
        <label>My repairs waiting to be sent to Solomeo</label>
        <sharedTo>
            <group>Associates</group>
            <group>Store_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_repairs_in_progress</fullName>
        <columns>NAME</columns>
        <columns>Associate__c</columns>
        <columns>Status__c</columns>
        <columns>Articolo__c</columns>
        <columns>Causa_difetto_riscontrato__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Titolare_Client_Advisor__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Riparazione richiesta al Customer Care,Numero di autorizzazione inserito,Invio capo verso sede,Riconsegna al cliente effettuata,Prodotto consegnato al cliente,Prodotto Riparato,Prodotto riconsegnato,Cliente contattato,Chiuso</value>
        </filters>
        <label>My repairs in progress</label>
        <sharedTo>
            <group>Associates</group>
            <group>Store_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_repairs_that_need_to_be_communicated</fullName>
        <columns>NAME</columns>
        <columns>Associate__c</columns>
        <columns>Status__c</columns>
        <columns>Client__c</columns>
        <columns>Articolo__c</columns>
        <columns>Causa_difetto_riscontrato__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Titolare_Client_Advisor__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Cliente contattato</value>
        </filters>
        <label>My repairs waiting for contact</label>
        <sharedTo>
            <group>Associates</group>
            <group>Store_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_repairs_waiting_for_authorization</fullName>
        <columns>NAME</columns>
        <columns>Associate__c</columns>
        <columns>Status__c</columns>
        <columns>Client__c</columns>
        <columns>Articolo__c</columns>
        <columns>Causa_difetto_riscontrato__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Titolare_Client_Advisor__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Numero di autorizzazione inserito</value>
        </filters>
        <filters>
            <field>Numero_Autorizzazione_Sede__c</field>
            <operation>equals</operation>
        </filters>
        <label>My repairs waiting for authorization</label>
        <sharedTo>
            <group>Associates</group>
            <group>Store_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Repairs_in_progress_Boutique</fullName>
        <columns>NAME</columns>
        <columns>Associate__c</columns>
        <columns>Status__c</columns>
        <columns>Client__c</columns>
        <columns>Articolo__c</columns>
        <columns>Causa_difetto_riscontrato__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Chiuso</value>
        </filters>
        <filters>
            <field>Titolare_Boutique__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Repairs in progress - Boutique</label>
        <sharedTo>
            <group>Associates</group>
            <group>Boutiques</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Riparazioni_da_autorizzare</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Boutique__c</columns>
        <columns>Articolo__c</columns>
        <columns>Colore__c</columns>
        <columns>Riparazione_autorizzata__c</columns>
        <columns>Numero_Autorizzazione_Sede__c</columns>
        <columns>Intervento_Richiesto__c</columns>
        <columns>Dettagli_Intervento__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Dettaglio_Riparazione__c.Riparazione_Customer_Care,Dettaglio_Riparazione__c.Riparazione_Sede,Dettaglio_Riparazione__c.Riparazione_Stock,Dettaglio_Riparazione__c.Riparazione_Uniform</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Numero di autorizzazione inserito</value>
        </filters>
        <label>Riparazioni in attesa di autorizzazione</label>
        <sharedTo>
            <group>Repairs_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Riparazioni_da_chiudere</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Boutique__c</columns>
        <columns>Articolo__c</columns>
        <columns>Colore__c</columns>
        <columns>Data_riparazione_prevista__c</columns>
        <columns>Data_riparazione_prevista_modificata__c</columns>
        <columns>Prodotto_riparato__c</columns>
        <columns>Riparazione_completata_Note__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Dettaglio_Riparazione__c.Riparazione_Customer_Care,Dettaglio_Riparazione__c.Riparazione_Sede,Dettaglio_Riparazione__c.Riparazione_Stock,Dettaglio_Riparazione__c.Riparazione_Uniform</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Riparazione effettuata</value>
        </filters>
        <filters>
            <field>Data_riparazione_prevista__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Data_riparazione_prevista_modificata__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Riparazioni da chiudere</label>
        <sharedTo>
            <group>Repairs_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Riparazioni_in_attesa_di_rientro</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Boutique__c</columns>
        <columns>Articolo__c</columns>
        <columns>Colore__c</columns>
        <columns>Tracking_Number_ritiro__c</columns>
        <columns>Riparazione_autorizzata__c</columns>
        <columns>Numero_Autorizzazione_Sede__c</columns>
        <columns>Intervento_Richiesto__c</columns>
        <columns>Dettagli_Intervento__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Dettaglio_Riparazione__c.Riparazione_Customer_Care,Dettaglio_Riparazione__c.Riparazione_Sede,Dettaglio_Riparazione__c.Riparazione_Stock,Dettaglio_Riparazione__c.Riparazione_Uniform</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Invio capo verso sede,Ricevimento capo danneggiato in sede</value>
        </filters>
        <label>Riparazioni in attesa di rientro</label>
        <sharedTo>
            <group>Repairs_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Riparazioni_in_progress</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Boutique__c</columns>
        <columns>Articolo__c</columns>
        <columns>Colore__c</columns>
        <columns>Data_riparazione_prevista__c</columns>
        <columns>Data_riparazione_prevista_modificata__c</columns>
        <columns>Prodotto_riparato__c</columns>
        <columns>Riparazione_completata_Note__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Dettaglio_Riparazione__c.Riparazione_Customer_Care,Dettaglio_Riparazione__c.Riparazione_Sede,Dettaglio_Riparazione__c.Riparazione_Stock,Dettaglio_Riparazione__c.Riparazione_Uniform</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Riparazione effettuata,Prodotto Riparato</value>
        </filters>
        <label>Riparazioni in progress</label>
        <sharedTo>
            <group>Repairs_Team</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Dettaglio Riparazione</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Riparazioni</pluralLabel>
    <recordTypes>
        <fullName>Customer_Care_US</fullName>
        <active>true</active>
        <label>Riparazione - Customer Care US</label>
    </recordTypes>
    <recordTypes>
        <fullName>Item_from_Stock_External_Service</fullName>
        <active>true</active>
        <label>Item from Stock_External Service</label>
    </recordTypes>
    <recordTypes>
        <fullName>Item_from_Stock_In_Boutique_Tailor</fullName>
        <active>true</active>
        <label>Item from Stock_In Boutique (Tailor)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Riparazione_Boutique_External_Service</fullName>
        <active>true</active>
        <label>Riparazione Boutique - External Service</label>
    </recordTypes>
    <recordTypes>
        <fullName>Riparazione_Boutique_Tailor</fullName>
        <active>true</active>
        <label>Riparazione Boutique - Tailor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Riparazione_Customer_Care</fullName>
        <active>true</active>
        <label>Riparazione - Customer Care</label>
    </recordTypes>
    <recordTypes>
        <fullName>Riparazione_Sede</fullName>
        <active>true</active>
        <label>Riparazione - Sede</label>
    </recordTypes>
    <recordTypes>
        <fullName>Riparazione_Stock</fullName>
        <active>true</active>
        <label>Riparazione Stock</label>
    </recordTypes>
    <recordTypes>
        <fullName>Riparazione_Uniform</fullName>
        <active>true</active>
        <label>Riparazione Uniform</label>
    </recordTypes>
    <recordTypes>
        <fullName>Uniform_Personal_Item_External_Service</fullName>
        <active>true</active>
        <label>Uniform/Personal Item_External Service</label>
    </recordTypes>
    <recordTypes>
        <fullName>Uniform_Personal_Item_In_Boutique_Tailor</fullName>
        <active>true</active>
        <label>Uniform/Personal Item_In Boutique (Tailor)</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Affidamento_e_data_riparazione_prevista</fullName>
        <active>true</active>
        <errorConditionFormula>OR(RecordType.DeveloperName = &quot;Riparazione_Sede&quot;, 
RecordType.DeveloperName = &quot;Riparazione_Customer_Care&quot;) &amp;&amp; 

OR ( 

(NOT(ISBLANK(Affidato_a__c)) &amp;&amp; ISBLANK(Data_riparazione_prevista__c)), 

(ISBLANK(Affidato_a__c)&amp;&amp; NOT(ISBLANK(Data_riparazione_prevista__c))) 
)</errorConditionFormula>
        <errorMessage>Necessario stabilire sia la persona a cui viene affidato il capo, sia prevedere una data di riparazione</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Allegato</fullName>
        <active>true</active>
        <errorConditionFormula>Ho_caricato_l_allegato_richiesto__c = False &amp;&amp; OR (RecordType.DeveloperName = &quot;Riparazione_Sede&quot;, 
RecordType.DeveloperName = &quot;Riparazione_Customer_Care&quot;,RecordType.DeveloperName = &quot;Riparazione_Boutique_External_Service&quot;,
RecordType.DeveloperName = &quot;Riparazione_Boutique_Tailor&quot;,RecordType.DeveloperName = &quot;Riparazione_Stock&quot;,RecordType.DeveloperName = &quot;Riparazione_Uniform&quot;,
RecordType.DeveloperName = &quot;Item_from_Stock_In_Boutique_Tailor&quot;,RecordType.DeveloperName = &quot;Item_from_Stock_External_Service&quot;,
RecordType.DeveloperName = &quot;Uniform_Personal_Item_External_Service&quot;,RecordType.DeveloperName = &quot;Uniform_Personal_Item_In_Boutique_Tailor&quot;,RecordType.DeveloperName = &quot;Customer_Care_US&quot;
)</errorConditionFormula>
        <errorMessage>Allegare il file richiesto</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Capo_Consegnato_al_Cliente</fullName>
        <active>true</active>
        <errorConditionFormula>/*OR (
(ISPICKVAL(Status__c, &quot;Chiuso&quot;) &amp;&amp; RecordType.DeveloperName = &quot;Riparazione_Store&quot;),
ISPICKVAL(Status__c, &quot;Riconsegna al cliente effettuata&quot;))*/

ISPICKVAL(Status__c, &quot;Chiuso&quot;)
&amp;&amp; ISBLANK(TEXT(Note_Avvenuta_Riconsegna__c))
&amp;&amp; RecordType.DeveloperName &lt;&gt; &quot;Riparazione_Boutique_External_Service&quot;</errorConditionFormula>
        <errorMessage>A operazione conclusa è necessario aggiungere una nota riguardante l&apos;avvenuta riconsegna</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Capo_Consegnato_al_Cliente_External</fullName>
        <active>true</active>
        <errorConditionFormula>/*OR (
(ISPICKVAL(Status__c, &quot;Chiuso&quot;) &amp;&amp; RecordType.DeveloperName = &quot;Riparazione_Store&quot;),
ISPICKVAL(Status__c, &quot;Riconsegna al cliente effettuata&quot;))*/

	
/* Riparazione_Boutique_External_Service */
AND(
ISPICKVAL(Status__c, &quot;Chiuso&quot;),
OR(
ISBLANK(TEXT(Costo__c)),
ISBLANK(TEXT(Note_Avvenuta_Riconsegna__c)),
ISBLANK(TEXT(CurrencyIsoCode)),
ISBLANK(Fornitore__c)),
RecordType.DeveloperName = &quot;Riparazione_Boutique_External_Service&quot;
)</errorConditionFormula>
        <errorMessage>A operazione conclusa è necessario aggiungere una nota riguardante l&apos;avvenuta riconsegna, il costo, la valuta e il fornitore della riparazione</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Email_Customer</fullName>
        <active>true</active>
        <description>Controllo su email customer presente con flag Send email a true</description>
        <errorConditionFormula>AND(
Send_email_to_client__c,
OR(ISNULL (Client__r.PersonEmail),ISBLANK(Client__r.PersonEmail))
)</errorConditionFormula>
        <errorMessage>It is not possible to send an email to the selected customer as there isn&apos;t any email registered.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invio_capo_verso_sede_CC</fullName>
        <active>true</active>
        <errorConditionFormula>AND (OR(RecordType.DeveloperName = &quot;Riparazione_Customer_Care&quot;,RecordType.DeveloperName = &quot;Customer_Care_US&quot;),
ISPICKVAL(Status__c, &quot;Ricevimento capo danneggiato in sede&quot;), OR (ISBLANK( Tracking_Number_ritiro__c ),
    ISBLANK(Data_Pickup__c),
    ISBLANK(Pickup_Number__c),
    ISBLANK(TEXT(Corriere_rientro__c))))</errorConditionFormula>
        <errorMessage>Prima di inviare il capo è necessario inserire il tracking number, la pickup date, il pickup number e il corriere di rientro</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invio_capo_verso_sede_sede</fullName>
        <active>true</active>
        <errorConditionFormula>AND(RecordType.DeveloperName = &quot;Riparazione_Sede&quot;, 
ISPICKVAL(Status__c, &quot;Ricevimento capo danneggiato in sede&quot;), ISBLANK( Tracking_Number_ritiro__c ))</errorConditionFormula>
        <errorDisplayField>Tracking_Number_ritiro__c</errorDisplayField>
        <errorMessage>Prima di inviare il capo è necessario inserire il tracking number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Limite_Status_Boutique</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED (Status__c) &amp;&amp; 
OR(ISPICKVAL(Status__c, &quot;Invio capo verso sede&quot;), 
ISPICKVAL(Status__c, &quot;Riparazione effettuata&quot;), 
ISPICKVAL(Status__c, &quot;Spedizione capo riparato effettuata&quot;), 
ISPICKVAL(Status__c, &quot;Ricevimento capo riparato in boutique&quot;)) 
&amp;&amp; OR($Profile.Id = $Setup.Profile__c.Id_Boutique__c,
$Profile.Id = $Setup.Profile__c.Id_Associate__c)</errorConditionFormula>
        <errorMessage>Lo step selezionato non è in carico al negozio</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Motivazione_Insoddisfazione</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
AND(
ISCHANGED(Motivazione_Insoddisfazione__c),
ISBLANK(TEXT(Note_Avvenuta_Riconsegna__c))),

AND(
ISPICKVAL(Note_Avvenuta_Riconsegna__c, &apos;Soddisfatto&apos;),
NOT(ISBLANK(TEXT(Motivazione_Insoddisfazione__c)))),

AND(
ISBLANK(TEXT(Motivazione_Insoddisfazione__c)),
NOT(ISBLANK(TEXT(Note_Avvenuta_Riconsegna__c))),
NOT(ISPICKVAL(Note_Avvenuta_Riconsegna__c, &apos;Soddisfatto&apos;))
))</errorConditionFormula>
        <errorDisplayField>Motivazione_Insoddisfazione__c</errorDisplayField>
        <errorMessage>E&apos; possibile inserire la motivazione solo in caso di cliente non soddisfatto</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Note_Avvenuta_Riconsegna</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
	ISBLANK(TEXT(Note_Avvenuta_Riconsegna__c))) &amp;&amp; 
	TEXT(Status__c) &lt;&gt; &quot;Prodotto consegnato al cliente&quot; &amp;&amp; 
	TEXT(Status__c) &lt;&gt; &quot;Aperto&quot; &amp;&amp; 
	TEXT(Status__c) &lt;&gt; &quot;Chiuso&quot; &amp;&amp; 
	TEXT(Status__c) &lt;&gt; &quot;Ricevimento capo riparato in boutique&quot; &amp;&amp; 
	TEXT(Status__c) &lt;&gt; &quot;Prodotto riconsegnato in Boutique&quot; &amp;&amp; 
	TEXT(Status__c) &lt;&gt; &quot;Prodotto Riparato&quot; &amp;&amp; 
	TEXT(Status__c) &lt;&gt; &quot;Prodotto riconsegnato&quot; &amp;&amp;
	RecordType.Name &lt;&gt; &apos;Riparazione - Customer Care US&apos;</errorConditionFormula>
        <errorMessage>Possono essere inserite note di avvenuta riconsegna solo al momento dell&apos;effettiva riconsegna al cliente del capo riparato</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Note_Insoddisfazione</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
AND(
ISCHANGED(Note_insoddisfazione__c),
ISBLANK(TEXT(Note_Avvenuta_Riconsegna__c))),

AND(
ISCHANGED(Motivazione_Insoddisfazione__c),
NOT(ISBLANK(TEXT(Note_Avvenuta_Riconsegna__c))),
NOT(ISPICKVAL(Note_Avvenuta_Riconsegna__c, &apos;Soddisfatto&apos;)),
ISPICKVAL(Motivazione_Insoddisfazione__c, &apos;Altro&apos;),
ISBLANK(Note_insoddisfazione__c)),

AND(
NOT(ISBLANK(TEXT(Motivazione_Insoddisfazione__c))),
NOT(ISPICKVAL(Motivazione_Insoddisfazione__c, &apos;Altro&apos;)),
NOT(ISBLANK(Note_insoddisfazione__c))
))</errorConditionFormula>
        <errorDisplayField>Note_insoddisfazione__c</errorDisplayField>
        <errorMessage>Specificare note solo per motivazione uguale ad Altro</errorMessage>
    </validationRules>
</CustomObject>